saving current state

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-\*\\'\'' "Best School"\'\''\\*$\?\*\*\*\*\*:)
-\*\\'\''"Best School"\'\''\\*$\?\*\*\*\*\*:)
-\*\\'\''\"Best School"\'\''\\*$\?\*\*\*\*\*:)
+testing
+'\*\\'\'' "Best School"\'\''\\*$\?\*\*\*\*\*:)'
+'\*\\'\''"Best School"\'\''\\*$\?\*\*\*\*\*:)'
+'\*\\'\''\"Best School"\'\''\\*$\?\*\*\*\*\*:)'
