--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 testing
+*.swp
 '\*\\'\'' "Best School"\'\''\\*$\?\*\*\*\*\*:)'
 '\*\\'\''"Best School"\'\''\\*$\?\*\*\*\*\*:)'
 '\*\\'\''\"Best School"\'\''\\*$\?\*\*\*\*\*:)'
